<resources>
    <string name="app_name">Restulator</string>
    <string name="waiter_name">Select Waiter name</string>
    <string name="enter_order_timing">Enter Order Timing</string>
    <string name="enter_order_complete_time">Enter Order Complete Time</string>
    <string name="select_dish_type">Select Dish Type</string>
    <string name="select_dish">Select Dish</string>
    <string name="please_enter_quantity">PLease Enter Quantity</string>
    <string name="maximum_dishes_that_can_be_added">Maximum Dishes that can be added:</string>
    <string name="add_order">Add Order</string>
    <string name="total_price">Total Price</string>
    <string name="deleteAlertTitle">DELETE ORDER</string>
    <string name="deleteAlertMessage">Are you sure you want to delete this order?</string>
    <string name="edit_order">Edit Order</string>
    <string name="add_dish">Add Dish</string>
    <string name="bill_total">TOTAL BILL</string>
    <string name="bill_amt_label">Bill:</string>
    <string name="payment_amt">Payment:</string>
    <string name="change_amt">Change:</string>
    <string name="payment_btn">Make Payment</string>
    <string name="tax_label">Tax:</string>

    <string-array name="spinnerItems">
        <item>pending</item>
        <item>cooking</item>
        <item>cooked</item>
        <item>served</item>
    </string-array>
</resources>
