<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".OrderPayment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/TotalPriceLabel"
            android:text="Total Price:"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/TotalPriceData"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/TaxLabel"
            android:text="@string/tax_label"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/TaxData"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/BillLabel"
            android:text="@string/bill_amt_label"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/BillData"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/PaymentLabel"
            android:text="@string/payment_amt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:id="@+id/PaymentBox"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/ChangeLabel"
            android:text="@string/change_amt"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/ChangeData"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:foregroundGravity="center"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/AddPaymentButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ic_round_submit_button"
            android:text="@string/payment_btn"
            android:onClick="makePayment"
            android:textColor="@color/textBackgroundColor"
            android:textSize="12dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ic_round_button"
            android:text="Add Review"
            android:id="@+id/ReviewAddButton"
            android:onClick="addReview"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/AddPaymentButton"
            android:textColor="@color/textBackgroundColor"
            android:textStyle="bold"
            android:textSize="12dp"/>

    </RelativeLayout>




</LinearLayout>